--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/ecom_thumb.png" />
+    <meta name="developer" content="Romana Stephenson" />
+    <meta name="description" content="E-commerce website" />
+    <meta property="og:url" content="react-ecommerce-project-by-romana.netlify.app" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
